[package]
name = "qemu-rp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.26", features = ["cargo"] }
env_logger = "0.11.6"
rand = "0.8.5"
smoltcp = "0.12.0"
log = "0.4.25"
nix = { version = "0.29.0", features = ["poll"] }
